Fix spelling of 'Scantrix' to 'ScanTrix'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scantrix Imaging Solutions - Teleradiology Services</title>
+    <title>ScanTrix Imaging Solutions - Teleradiology Services</title>
     <style>
         body {
             font-family: "Segoe UI", sans-serif;
@@ -154,7 +154,7 @@
 <body>
     <div class="hero">
         <div class="hero-content">
-            <h1>Scantrix Imaging Solutions</h1>
+            <h1>ScanTrix Imaging Solutions</h1>
             <p>Advanced Teleradiology & Tele-reporting Services — 24×7</p>
             <a class="btn" href="#contact">Get in Touch</a>
         </div>
@@ -169,7 +169,7 @@
 
     <section id="about">
         <h2>About Us</h2>
-        <p>Scantrix Imaging Solutions provides reliable, fast, and accurate teleradiology services.</p>
+        <p>ScanTrix Imaging Solutions provides reliable, fast, and accurate teleradiology services.</p>
     </section>
 </body>
 </html>
