--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ScanTrix Imaging Solutions - Teleradiology Services</title>
+    <title>Scantrix Imaging Solutions - Teleradiology Services</title>
     <style>
         body {
             font-family: "Segoe UI", sans-serif;
@@ -12,8 +12,6 @@
             color: #222;
             scroll-behavior: smooth;
         }
-
-        /* HERO SECTION */
         .hero {
             background: url('https://images.unsplash.com/photo-1580281657527-47a4ae7af614?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
             height: 70vh;
@@ -34,6 +32,7 @@
         .hero-content {
             position: relative;
             z-index: 2;
+            animation: fadeIn 1.2s ease-in-out;
         }
         .hero h1 {
             font-size: 3rem;
@@ -46,7 +45,6 @@
         .hero .btn {
             margin-top: 20px;
         }
-
         nav {
             background: #0d326f;
             padding: 12px;
@@ -65,18 +63,17 @@
         nav a:hover {
             color: #ffba08;
         }
-
         section {
             padding: 60px 20px;
             max-width: 1100px;
             margin: auto;
+            animation: slideUp 0.8s ease;
         }
         h2 {
             text-align: center;
             font-size: 2rem;
             margin-bottom: 25px;
         }
-
         .services {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -99,7 +96,6 @@
             margin-bottom: 12px;
             color: #0d326f;
         }
-
         .contact-box {
             background: linear-gradient(120deg, #0b275a, #144a9c);
             color: white;
@@ -108,7 +104,6 @@
             text-align: center;
             box-shadow: 0 4px 20px rgba(0,0,0,0.15);
         }
-
         .btn {
             background: #ffba08;
             padding: 12px 22px;
@@ -119,11 +114,9 @@
             text-decoration: none;
             transition: 0.3s;
         }
-
         .btn:hover {
             background: #ffca32;
         }
-
         .whatsapp-btn {
             position: fixed;
             bottom: 20px;
@@ -141,7 +134,9 @@
             box-shadow: 0 4px 12px rgba(0,0,0,0.3);
             z-index: 999;
         }
-
+        .whatsapp-btn:hover {
+            background: #35e67a;
+        }
         footer {
             background: #0d326f;
             color: white;
@@ -149,27 +144,73 @@
             padding: 18px;
             margin-top: 40px;
         }
+        #chatbot-container {
+            position: fixed; 
+            bottom: 140px; 
+            right: 20px; 
+            width: 320px; 
+            height: 420px; 
+            background: white; 
+            border-radius: 12px; 
+            box-shadow: 0 4px 18px rgba(0,0,0,0.25); 
+            display: none; 
+            flex-direction: column; 
+            overflow: hidden;
+        }
     </style>
 </head>
 <body>
     <div class="hero">
         <div class="hero-content">
-            <h1>ScanTrix Imaging Solutions</h1>
+            <h1>Scantrix Imaging Solutions</h1>
             <p>Advanced Teleradiology & Tele-reporting Services — 24×7</p>
             <a class="btn" href="#contact">Get in Touch</a>
         </div>
     </div>
-
     <nav>
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#testimonials">Testimonials</a>
         <a href="#contact">Contact</a>
     </nav>
-
     <section id="about">
         <h2>About Us</h2>
-        <p>ScanTrix Imaging Solutions provides reliable, fast, and accurate teleradiology services.</p>
+        <p>
+            Scantrix Imaging Solutions provides reliable, fast, and accurate teleradiology services for diagnostic centers, hospitals, and clinics across India.
+        </p>
     </section>
+    <section id="services">
+        <h2>Our Tele-Reporting Services</h2>
+        <div class="services">
+            <div class="card"><div class="icon">🖥️</div><h3>CT Scan Reporting</h3></div>
+            <div class="card"><div class="icon">🧠</div><h3>MRI Reporting</h3></div>
+            <div class="card"><div class="icon">📸</div><h3>X-Ray Reporting</h3></div>
+            <div class="card"><div class="icon">⏱️</div><h3>Emergency STAT Reporting</h3></div>
+        </div>
+    </section>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <div class="contact-box">
+            <p><strong>Email:</strong> info@scantriximaging.com</p>
+        </div>
+    </section>
+
+    <div id="chatbot-container">
+        <div style="background:#0d326f; color:white; padding:12px; font-weight:bold;">Scantrix Assistant</div>
+        <div id="chatbot-messages" style="padding:10px; height:300px; overflow-y:auto;"></div>
+        <div style="display:flex;">
+            <input id="chatbot-input" type="text" placeholder="Type a message..." style="flex:1; padding:10px;">
+            <button onclick="sendMessage()" style="background:#0d326f; color:white;">Send</button>
+        </div>
+    </div>
+
+    <button onclick="toggleChatbot()" style="position:fixed; bottom:20px; right:20px;">💬</button>
+
+    <script>
+        function toggleChatbot() {
+            const bot = document.getElementById('chatbot-container');
+            bot.style.display = bot.style.display === 'flex' ? 'none' : 'flex';
+        }
+    </script>
 </body>
 </html>
