--- a/index.html
+++ b/index.html
@@ -1,91 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ScanTrix Imaging Solutions – Tele Radiology Reporting</title>
-    <style>
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: Arial, Helvetica, sans-serif; }
-        body { line-height: 1.6; color: #333; }
-        header { background: #0b5ed7; color: #fff; padding: 20px 40px; position: sticky; top: 0; }
-        nav { display: flex; justify-content: space-between; align-items: center; }
-        nav ul { list-style: none; display: flex; gap: 20px; }
-        nav ul li a { color: #fff; text-decoration: none; font-weight: bold; }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ScanTrix Imaging Solutions – Tele Radiology Reporting</title>
 
-        .hero { background: linear-gradient(to right, #0b5ed7, #198754); color: #fff; padding: 80px 40px; text-align: center; }
-        .hero h1 { font-size: 40px; margin-bottom: 15px; }
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-        section { padding: 60px 40px; max-width: 1100px; margin: auto; }
-        section h2 { font-size: 30px; margin-bottom: 20px; color: #0b5ed7; }
+  <style>
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Poppins', sans-serif; }
+    body { color: #2c2c2c; background: #ffffff; line-height: 1.6; }
 
-        .services { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
-        .card { background: #f8f9fa; padding: 25px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
+    /* ---------- HEADER ---------- */
+    header { background: #0b5ed7; padding: 15px 30px; position: sticky; top: 0; z-index: 100; }
+    nav { max-width: 1200px; margin: auto; display: flex; justify-content: space-between; align-items: center; }
 
-        footer { background: #0b5ed7; color: #fff; text-align: center; padding: 20px; }
+    .logo { display: flex; align-items: center; gap: 10px; color: #fff; }
+    .logo img { height: 45px; }
+    .logo span { font-size: 20px; font-weight: 600; }
 
-        .chatbot { position: fixed; bottom: 20px; right: 20px; background: #198754; color: #fff; width: 60px; height: 60px;
-            border-radius: 50%; display: flex; align-items: center; justify-content: center; cursor: pointer; font-size: 24px; }
-        .chat-window { position: fixed; bottom: 90px; right: 20px; width: 300px; background: #fff; border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2); display: none; flex-direction: column; }
-        .chat-header { background: #198754; color: #fff; padding: 10px; }
-        .chat-body { padding: 10px; }
-    </style>
+    nav ul { list-style: none; display: flex; gap: 25px; }
+    nav ul li a { color: #fff; text-decoration: none; font-weight: 500; }
+    nav ul li a:hover { text-decoration: underline; }
+
+    /* ---------- HERO ---------- */
+    .hero { background: linear-gradient(rgba(11,94,215,0.9), rgba(25,135,84,0.9)),
+             url('https://images.unsplash.com/photo-1580281657521-6c8aef7c2a8b') center/cover no-repeat;
+             color: #fff; }
+    .hero-inner { max-width: 1200px; margin: auto; padding: 90px 30px; text-align: center; }
+    .hero h1 { font-size: 42px; margin-bottom: 15px; }
+    .hero p { font-size: 18px; max-width: 800px; margin: auto; }
+
+    /* ---------- SECTIONS ---------- */
+    section { padding: 70px 30px; max-width: 1200px; margin: auto; }
+    section h2 { font-size: 32px; color: #0b5ed7; margin-bottom: 20px; text-align: center; }
+    section p { margin-bottom: 15px; text-align: center; }
+
+    /* ---------- SERVICES ---------- */
+    .services { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 25px; margin-top: 40px; }
+    .card { background: #f8f9fa; padding: 30px; border-radius: 12px; box-shadow: 0 6px 15px rgba(0,0,0,0.08); text-align: center; }
+    .card img { width: 60px; margin-bottom: 15px; }
+    .card h3 { color: #198754; margin-bottom: 10px; }
+
+    /* ---------- CONTACT ---------- */
+    .contact-box { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px; margin-top: 30px; }
+    .contact-box div { background: #f8f9fa; padding: 30px; border-radius: 12px; text-align: center; }
+
+    /* ---------- FOOTER ---------- */
+    footer { background: #0b5ed7; color: #fff; text-align: center; padding: 25px; margin-top: 50px; }
+
+    /* ---------- CHAT ---------- */
+    .chatbot { position: fixed; bottom: 20px; right: 20px; background: #198754; color: #fff; width: 60px; height: 60px;
+               border-radius: 50%; display: flex; align-items: center; justify-content: center; cursor: pointer; font-size: 24px; }
+    .chat-window { position: fixed; bottom: 95px; right: 20px; width: 300px; background: #fff; border-radius: 12px;
+                   box-shadow: 0 10px 25px rgba(0,0,0,0.25); display: none; flex-direction: column; }
+    .chat-header { background: #198754; color: #fff; padding: 12px; border-radius: 12px 12px 0 0; font-weight: 500; }
+    .chat-body { padding: 15px; font-size: 14px; }
+
+    /* ---------- RESPONSIVE ---------- */
+    @media (max-width: 768px) {
+      nav ul { display: none; }
+      .hero h1 { font-size: 30px; }
+      section h2 { font-size: 26px; }
+    }
+  </style>
 </head>
 <body>
 
 <header>
-    <nav>
-        <h2>ScanTrix Imaging Solutions</h2>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+  <nav>
+    <div class="logo">
+      <!-- Replace logo.png with your actual logo file -->
+      <img src="https://dummyimage.com/100x100/ffffff/0b5ed7&text=S" alt="ScanTrix Logo">
+      <span>ScanTrix Imaging Solutions</span>
+    </div>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 </header>
 
 <div class="hero">
+  <div class="hero-inner">
     <h1>Tele Radiology Reporting Services</h1>
-    <p>Accurate & timely X-Ray, CT & MRI reporting by expert radiologists.</p>
+    <p>High-quality, fast & secure X-Ray, CT and MRI reporting by experienced radiologists – available 24×7.</p>
+  </div>
 </div>
 
 <section id="about">
-    <h2>About Us</h2>
-    <p>ScanTrix Imaging Solutions provides reliable tele-radiology reporting services to hospitals and diagnostic centers.</p>
+  <h2>About ScanTrix</h2>
+  <p>ScanTrix Imaging Solutions delivers dependable tele-radiology reporting services to hospitals, clinics and diagnostic centers across India.</p>
+  <p>We focus on accuracy, fast turnaround time, data security and clinical excellence.</p>
 </section>
 
 <section id="services">
-    <h2>Our Services</h2>
-    <div class="services">
-        <div class="card"><h3>X-Ray Reporting</h3><p>Fast and accurate X-Ray interpretations.</p></div>
-        <div class="card"><h3>CT Scan Reporting</h3><p>Head, chest, abdomen & trauma CT reporting.</p></div>
-        <div class="card"><h3>MRI Reporting</h3><p>Neuro, spine & musculoskeletal MRI reporting.</p></div>
-        <div class="card"><h3>24x7 Support</h3><p>Round-the-clock tele reporting services.</p></div>
+  <h2>Our Services</h2>
+  <div class="services">
+    <div class="card">
+      <img src="https://cdn-icons-png.flaticon.com/512/2966/2966488.png" alt="X-Ray">
+      <h3>X-Ray Reporting</h3>
+      <p>Routine and emergency X-Ray interpretations with quick turnaround.</p>
     </div>
+    <div class="card">
+      <img src="https://cdn-icons-png.flaticon.com/512/2966/2966493.png" alt="CT Scan">
+      <h3>CT Scan Reporting</h3>
+      <p>Expert CT reporting including trauma, chest, abdomen and neuro.</p>
+    </div>
+    <div class="card">
+      <img src="https://cdn-icons-png.flaticon.com/512/2966/2966496.png" alt="MRI">
+      <h3>MRI Reporting</h3>
+      <p>Detailed MRI reporting for brain, spine and musculoskeletal studies.</p>
+    </div>
+    <div class="card">
+      <img src="https://cdn-icons-png.flaticon.com/512/2966/2966481.png" alt="24x7">
+      <h3>24×7 Tele Reporting</h3>
+      <p>Round-the-clock coverage for emergency and night reporting.</p>
+    </div>
+  </div>
 </section>
 
 <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Hyderabad, Telangana, India</p>
-    <p>Email: info@scantrix.com</p>
-    <p>Phone: +91-XXXXXXXXXX</p>
+  <h2>Contact Us</h2>
+  <div class="contact-box">
+    <div>
+      <h3>Our Address</h3>
+      <p>ScanTrix Imaging Solutions<br>Hyderabad, Telangana, India</p>
+    </div>
+    <div>
+      <h3>Get in Touch</h3>
+      <p>Email: info@scantrix.com</p>
+      <p>Phone: +91-XXXXXXXXXX</p>
+      <p>Service Availability: 24×7</p>
+    </div>
+  </div>
 </section>
 
 <footer>
-    <p>&copy; 2025 ScanTrix Imaging Solutions</p>
+  <p>&copy; 2025 ScanTrix Imaging Solutions. All Rights Reserved.</p>
 </footer>
 
 <div class="chatbot" onclick="toggleChat()">💬</div>
-<div class="chat-window" id="chat">
-    <div class="chat-header">ScanTrix Chat</div>
-    <div class="chat-body">Hello 👋 How can we help you?</div>
+<div class="chat-window" id="chatWindow">
+  <div class="chat-header">ScanTrix Chat</div>
+  <div class="chat-body">Hello 👋<br>How can we assist you with our Tele Radiology services?</div>
 </div>
 
 <script>
-function toggleChat() {
-    const c = document.getElementById('chat');
-    c.style.display = c.style.display === 'flex' ? 'none' : 'flex';
-}
+  function toggleChat() {
+    const chat = document.getElementById('chatWindow');
+    chat.style.display = chat.style.display === 'flex' ? 'none' : 'flex';
+  }
 </script>
 
 </body>
