Update About section heading to include 'Imaging Solutions'

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </div>
 
 <section id="about">
-  <h2>About ScanTrix</h2>
+  <h2>About ScanTrix Imaging Solutions</h2>
   <p>ScanTrix Imaging Solutions delivers dependable tele-radiology reporting services to hospitals, clinics and diagnostic centers across India.</p>
   <p>We focus on accuracy, fast turnaround time, data security and clinical excellence.</p>
 </section>
