--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
     <div>
       <h3>Get in Touch</h3>
-      <p>Email: info@scantriximaging.com</p>
+      <p>Email: hello@scantriximaging.com</p>
       <p>Phone: +91-XXXXXXXXXX</p>
       <p>Service Availability: 24×7</p>
     </div>
