Update contact phone number in index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div>
       <h3>Get in Touch</h3>
       <p>Email: hello@scantriximaging.com</p>
-      <p>Phone: +91-XXXXXXXXXX</p>
+      <p>Phone: +91-9059559496</p>
       <p>Service Availability: 24×7</p>
     </div>
   </div>
