--- a/index.html
+++ b/index.html
@@ -1,57 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="robots" content="noindex, nofollow">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ScanTrix Imaging Solutions – Tele Radiology Reporting</title>
+
+  <title>ScanTrix Imaging Solutions – Tele Radiology Reporting Services</title>
+  <link rel="icon" type="image/png" href="assets/ScanTrix_Logo.png">
+  <link rel="apple-touch-icon" href="assets/ScanTrix_Logo.png">
+
+
+  <meta name="description" content="ScanTrix Imaging Solutions offers fast, accurate and secure Tele-Radiology reporting for X-Ray, CT & MRI. Trusted reporting services available 24x7 across India.">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Favicon (optional — uses logo) -->
+  <link rel="icon" type="image/png" href="https://drive.google.com/uc?export=view&id=1BKq_eQFUnoHVDYTqrfQR7X4Ry5X0W_2y">
 
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Poppins', sans-serif; }
     body { color: #2c2c2c; background: #ffffff; line-height: 1.6; }
 
-    /* ---------- HEADER ---------- */
     header { background: #0b5ed7; padding: 15px 30px; position: sticky; top: 0; z-index: 100; }
     nav { max-width: 1200px; margin: auto; display: flex; justify-content: space-between; align-items: center; }
 
     .logo { display: flex; align-items: center; gap: 10px; color: #fff; }
-    .logo img { height: 45px; }
+    .logo img { height: 50px; border-radius: 6px; }
     .logo span { font-size: 20px; font-weight: 600; }
 
     nav ul { list-style: none; display: flex; gap: 25px; }
     nav ul li a { color: #fff; text-decoration: none; font-weight: 500; }
     nav ul li a:hover { text-decoration: underline; }
 
-    /* ---------- HERO ---------- */
     .hero { background: linear-gradient(rgba(11,94,215,0.9), rgba(25,135,84,0.9)),
              url('https://images.unsplash.com/photo-1580281657521-6c8aef7c2a8b') center/cover no-repeat;
              color: #fff; }
     .hero-inner { max-width: 1200px; margin: auto; padding: 90px 30px; text-align: center; }
-    .hero h1 { font-size: 42px; margin-bottom: 15px; }
+    .hero h1 { font-size: 40px; margin-bottom: 15px; }
     .hero p { font-size: 18px; max-width: 800px; margin: auto; }
 
-    /* ---------- SECTIONS ---------- */
     section { padding: 70px 30px; max-width: 1200px; margin: auto; }
-    section h2 { font-size: 32px; color: #0b5ed7; margin-bottom: 20px; text-align: center; }
+    section h2 { font-size: 30px; color: #0b5ed7; margin-bottom: 20px; text-align: center; }
     section p { margin-bottom: 15px; text-align: center; }
 
-    /* ---------- SERVICES ---------- */
     .services { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 25px; margin-top: 40px; }
     .card { background: #f8f9fa; padding: 30px; border-radius: 12px; box-shadow: 0 6px 15px rgba(0,0,0,0.08); text-align: center; }
     .card img { width: 60px; margin-bottom: 15px; }
     .card h3 { color: #198754; margin-bottom: 10px; }
 
-    /* ---------- CONTACT ---------- */
     .contact-box { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px; margin-top: 30px; }
     .contact-box div { background: #f8f9fa; padding: 30px; border-radius: 12px; text-align: center; }
 
-    /* ---------- FOOTER ---------- */
     footer { background: #0b5ed7; color: #fff; text-align: center; padding: 25px; margin-top: 50px; }
 
-    /* ---------- CHAT ---------- */
     .chatbot { position: fixed; bottom: 20px; right: 20px; background: #198754; color: #fff; width: 60px; height: 60px;
                border-radius: 50%; display: flex; align-items: center; justify-content: center; cursor: pointer; font-size: 24px; }
     .chat-window { position: fixed; bottom: 95px; right: 20px; width: 300px; background: #fff; border-radius: 12px;
@@ -59,23 +60,23 @@
     .chat-header { background: #198754; color: #fff; padding: 12px; border-radius: 12px 12px 0 0; font-weight: 500; }
     .chat-body { padding: 15px; font-size: 14px; }
 
-    /* ---------- RESPONSIVE ---------- */
     @media (max-width: 768px) {
       nav ul { display: none; }
       .hero h1 { font-size: 30px; }
-      section h2 { font-size: 26px; }
+      section h2 { font-size: 24px; }
     }
   </style>
 </head>
+
 <body>
 
 <header>
   <nav>
     <div class="logo">
-      <!-- Replace logo.png with your actual logo file -->
-      <img src="https://dummyimage.com/100x100/ffffff/0b5ed7&text=S" alt="ScanTrix Logo">
+      <img src="assets/ScanTrix_Logo.png" alt="ScanTrix Logo">
       <span>ScanTrix Imaging Solutions</span>
     </div>
+
     <ul>
       <li><a href="#about">About</a></li>
       <li><a href="#services">Services</a></li>
@@ -87,7 +88,7 @@
 <div class="hero">
   <div class="hero-inner">
     <h1>Tele Radiology Reporting Services</h1>
-    <p>High-quality, fast & secure X-Ray, CT and MRI reporting by experienced radiologists – available 24×7.</p>
+    <p>High-quality, fast & secure X-Ray, CT and MRI reporting by experienced radiologists — available 24×7.</p>
   </div>
 </div>
 
@@ -99,24 +100,28 @@
 
 <section id="services">
   <h2>Our Services</h2>
+
   <div class="services">
     <div class="card">
-      <img src="https://cdn-icons-png.flaticon.com/512/2966/2966488.png" alt="X-Ray">
+      <img loading="lazy" src="https://cdn-icons-png.flaticon.com/512/2966/2966488.png" alt="X-Ray Reporting">
       <h3>X-Ray Reporting</h3>
       <p>Routine and emergency X-Ray interpretations with quick turnaround.</p>
     </div>
+
     <div class="card">
-      <img src="https://cdn-icons-png.flaticon.com/512/2966/2966493.png" alt="CT Scan">
+      <img loading="lazy" src="https://cdn-icons-png.flaticon.com/512/2966/2966493.png" alt="CT Scan Reporting">
       <h3>CT Scan Reporting</h3>
       <p>Expert CT reporting including trauma, chest, abdomen and neuro.</p>
     </div>
+
     <div class="card">
-      <img src="https://cdn-icons-png.flaticon.com/512/2966/2966496.png" alt="MRI">
+      <img loading="lazy" src="https://cdn-icons-png.flaticon.com/512/2966/2966496.png" alt="MRI Reporting">
       <h3>MRI Reporting</h3>
       <p>Detailed MRI reporting for brain, spine and musculoskeletal studies.</p>
     </div>
+
     <div class="card">
-      <img src="https://cdn-icons-png.flaticon.com/512/2966/2966481.png" alt="24x7">
+      <img loading="lazy" src="https://cdn-icons-png.flaticon.com/512/2966/2966481.png" alt="24x7 Tele Reporting">
       <h3>24×7 Tele Reporting</h3>
       <p>Round-the-clock coverage for emergency and night reporting.</p>
     </div>
@@ -125,11 +130,13 @@
 
 <section id="contact">
   <h2>Contact Us</h2>
+
   <div class="contact-box">
     <div>
       <h3>Our Address</h3>
       <p>ScanTrix Imaging Solutions<br>Hyderabad, Telangana, India</p>
     </div>
+
     <div>
       <h3>Get in Touch</h3>
       <p>Email: hello@scantriximaging.com</p>
@@ -144,16 +151,19 @@
 </footer>
 
 <div class="chatbot" onclick="toggleChat()">💬</div>
+
 <div class="chat-window" id="chatWindow">
   <div class="chat-header">ScanTrix Chat</div>
-  <div class="chat-body">Hello 👋<br>How can we assist you with our Tele Radiology services?</div>
+  <div class="chat-body">
+    Hello 👋<br>How can we assist you with our Tele Radiology services?
+  </div>
 </div>
 
 <script>
-  function toggleChat() {
-    const chat = document.getElementById('chatWindow');
-    chat.style.display = chat.style.display === 'flex' ? 'none' : 'flex';
-  }
+function toggleChat() {
+  const chat = document.getElementById('chatWindow');
+  chat.style.display = chat.style.display === 'flex' ? 'none' : 'flex';
+}
 </script>
 
 </body>
