--- a/index.html
+++ b/index.html
@@ -139,9 +139,10 @@
 
     <div>
       <h3>Get in Touch</h3>
-      <p>Email: hello@scantriximaging.com</p>
-      <p>Phone: +91-9059559496</p>
-      <p>Service Availability: 24×7</p>
+      <p>Email: hello@scantriximaging.com
+      <br>Phone: +91-9059559496
+      <br>Service Availability: 24×7</br>
+      </p>
     </div>
   </div>
 </section>
