--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>ScanTrix Imaging Solutions – Tele Radiology Reporting Services</title>
+  <title>ScanTrix Imaging – Tele Radiology Reporting Services</title>
   <link rel="icon" type="image/png" href="assets/ScanTrix_Logo.png">
   <link rel="apple-touch-icon" href="assets/ScanTrix_Logo.png">
 
 
-  <meta name="description" content="ScanTrix Imaging Solutions offers fast, accurate and secure Tele-Radiology reporting for X-Ray, CT & MRI. Trusted reporting services available 24x7 across India.">
+  <meta name="description" content="ScanTrix Imaging offers fast, accurate and secure Tele-Radiology reporting for X-Ray, CT & MRI. Trusted reporting services available 24x7 across India.">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -74,7 +74,7 @@
   <nav>
     <div class="logo">
       <img src="assets/ScanTrix_Logo.png" alt="ScanTrix Logo">
-      <span>ScanTrix Imaging Solutions</span>
+      <span>ScanTrix Imaging</span>
     </div>
 
     <ul>
@@ -93,8 +93,8 @@
 </div>
 
 <section id="about">
-  <h2>About ScanTrix Imaging Solutions</h2>
-  <p>ScanTrix Imaging Solutions delivers dependable tele-radiology reporting services to hospitals, clinics and diagnostic centers across India.</p>
+  <h2>About ScanTrix Imaging</h2>
+  <p>ScanTrix Imaging delivers dependable tele-radiology reporting services to hospitals, clinics and diagnostic centers across India.</p>
   <p>We focus on accuracy, fast turnaround time, data security and clinical excellence.</p>
 </section>
 
@@ -134,7 +134,7 @@
   <div class="contact-box">
     <div>
       <h3>Our Address</h3>
-      <p>ScanTrix Imaging Solutions<br>Hyderabad, Telangana, India</p>
+      <p>ScanTrix Imaging<br>Hyderabad, Telangana, India</p>
     </div>
 
     <div>
@@ -148,7 +148,7 @@
 </section>
 
 <footer>
-  <p>&copy; 2025 ScanTrix Imaging Solutions. All Rights Reserved.</p>
+  <p>&copy; 2025 ScanTrix Imaging. All Rights Reserved.</p>
 </footer>
 
 <div class="chatbot" onclick="toggleChat()">💬</div>
