Update brand name from 'ScanTrix' to 'ScanTrix Imaging'

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container nav-inner">
             <a href="#" class="brand-logo">
                 <img src="assets/logo.png" alt="ScanTrix Logo" class="brand-icon">
-                ScanTrix
+                ScanTrix Imaging
             </a>
             
             <div class="menu-toggle" id="mobile-menu">
@@ -45,12 +45,12 @@
             </div>
             <h1>Reliable Radiology Reporting.<br>Anytime, Anywhere.</h1>
             <p>ScanTrix Imaging empowers hospitals and diagnostic centers with 24/7 access to sub-specialty radiologists. We turn images into answers with speed and precision.</p>
-            <!--
             <div class="cta-group">
+                <!--
                 <a href="#contact" class="nav-btn" style="border:none;">Start Free Trial</a>
+            -->
                 <a href="#services" class="btn-outline">Explore Services</a>
             </div>
-            -->
         </div>
     </section>
 
