--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     
     <title>ScanTrix Imaging | Advanced Teleradiology Services</title>
     <meta name="description" content="Premium teleradiology reporting services. We connect diagnostic centers with sub-specialty radiologists for fast, accurate MRI, CT, and X-Ray reporting.">
+    <meta name="description" content="Trusted Teleradiology Services in India. We provide 24/7 remote radiology reporting, online CT/MRI reporting, and Nighthawk services for diagnostic centers. HIPAA compliant.">
+    <meta name="keywords" content="Teleradiology Services India, Remote Radiology Reporting, Online CT MRI Reporting, Nighthawk Radiology Services, Outsourced Radiology Reporting, X-Ray Tele-reporting, Emergency Teleradiology">
     
     <link rel="icon" href="assets/favicon.png" type="image/png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
