--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
                 <a href="#workflow" onclick="toggleMenu()">Process</a>
                 <a href="#services" onclick="toggleMenu()">Services</a>
                 <a href="#technology" onclick="toggleMenu()">Technology</a>
-                <a href="#contact" class="mobile-only-btn" onclick="toggleMenu()" style="display:none;">Partner With Us</a>
+                <a href="#contact" onclick="toggleMenu()">Contact US</a>
+                <a href="https://radeze.com/worklist" class="mobile-only-btn" onclick="toggleMenu()" style="display:none;">Login</a>
             </div>
             
-            <a href="#contact" class="nav-btn">Partner With Us</a>
+            <a href="https://radeze.com/worklist" class="nav-btn">Login</a>
         </div>
     </nav>
 
