--- a/index.html
+++ b/index.html
@@ -205,25 +205,32 @@
                     </div>
                 </div>
 
-                <form onsubmit="event.preventDefault(); alert('Message sent! We will contact you shortly.');">
-                    <div class="form-group">
-                        <label class="form-label">Full Name</label>
-                        <input type="text" class="form-input" placeholder="Dr. Jane Doe">
-                    </div>
-                    <div class="form-group">
-                        <label class="form-label">Email Address</label>
-                        <input type="email" class="form-input" placeholder="jane@hospital.com">
-                    </div>
-                    <div class="form-group">
-                        <label class="form-label">Service Interest</label>
-                        <select class="form-input">
-                            <option>General Teleradiology</option>
-                            <option>Nighthawk Services</option>
-                            <option>Second Opinion</option>
-                        </select>
-                    </div>
-                    <button type="submit" class="nav-btn" style="width: 100%; border: none; cursor: pointer;">Send Message</button>
-                </form>
+                <form action="https://formsubmit.co/prabhakar@scantriximaging.com" method="POST">
+    
+    <input type="hidden" name="_next" value="https://www.scantriximaging.com/#contact">
+    
+    <input type="hidden" name="_subject" value="New Inquiry from ScanTrix Website">
+
+    <input type="text" name="_honey" style="display:none">
+
+    <div class="form-group">
+        <label class="form-label">Full Name</label>
+        <input type="text" name="name" class="form-input" placeholder="Dr. Jane Doe" required>
+    </div>
+    <div class="form-group">
+        <label class="form-label">Email Address</label>
+        <input type="email" name="email" class="form-input" placeholder="jane@hospital.com" required>
+    </div>
+    <div class="form-group">
+        <label class="form-label">Service Interest</label>
+        <select name="service" class="form-input">
+            <option value="General Teleradiology">General Teleradiology</option>
+            <option value="Nighthawk Services">Nighthawk Services</option>
+            <option value="Second Opinion">Second Opinion</option>
+        </select>
+    </div>
+    <button type="submit" class="nav-btn" style="width: 100%; border: none; cursor: pointer;">Send Message</button>
+</form>
             </div>
         </div>
     </section>
