--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1581594693702-fbdc51b2763b?q=80&w=800&auto=format&fit=crop" alt="Doctor Reviewing" class="service-img">
+                    <img src="https://plus.unsplash.com/premium_photo-1673953509957-3eddb52e70c2?w=600&auto=format&fit=crop" alt="Doctor Reviewing" class="service-img">
                     <div class="service-body">
                         <i class="fa-solid fa-user-doctor service-icon"></i>
                         <h3>Second Opinion</h3>
