Integrate Google Tag Manager and verification meta tag
Added Google Tag Manager and site verification meta tag.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S0605ZDVZG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-S0605ZDVZG');
+    </script>
+
+    <meta name="google-site-verification" content="9Op7umY8hf9DpocLTcc-rwjOvwvctVvL42q3hvzksZc" />
+    
     <title>ScanTrix Imaging | Advanced Teleradiology Services</title>
     <meta name="description" content="Premium teleradiology reporting services. We connect diagnostic centers with sub-specialty radiologists for fast, accurate MRI, CT, and X-Ray reporting.">
     <meta name="description" content="Trusted Teleradiology Services in India. We provide 24/7 remote radiology reporting, online CT/MRI reporting, and Nighthawk services for diagnostic centers. HIPAA compliant.">
